k8s-manifests/ingress.yaml
---
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "ingress-controller"
  namespace: "frontend"
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  defaultBackend:
    service:
      name: "server-static-resource-service"
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: "/api/*"
        backend:
          service:
            name: "server-static-resource-service"
            port:
              number: 80
        pathType: "ImplementationSpecific"
      - path: "/auth/*"
        backend:
          service:
            name: "server-static-resource-service"
            port:
              number: 80
        pathType: "ImplementationSpecific"
    host: "recipee.com"
status:
  loadBalancer: {}
